// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cacheJsFile 1`] = `
Object {
  "/src/file1.js": Object {
    "all": Array [
      "./subdir1/file1",
      "./subdir1/file2",
    ],
    "default": "file1",
    "named": Array [
      "var1",
      "var2",
      "var3",
      "fn",
      "Something",
      "varDeclaredEarlier",
      "varDeclaredEarlierWithSemiColon",
      "subdir2_file1_var1",
      "subdir2_file1_var2_renamed",
      "subdir2_file2_var1_renamed",
    ],
    "reexports": Object {
      "./subdir2/file1": Array [
        "subdir2_file1_var1",
        "subdir2_file1_var2",
      ],
      "./subdir2/file2": Array [
        "subdir2_file2_var1",
      ],
    },
    "types": Array [
      "MyType1",
      "MyType2",
    ],
  },
}
`;

exports[`processReexports 1`] = `
Object {
  "/src/file1.js": Object {
    "default": "file1",
    "named": Array [
      "var1",
      "var2",
      "var3",
      "fn",
      "Something",
      "varDeclaredEarlier",
      "varDeclaredEarlierWithSemiColon",
      "subdir2_file1_var1",
      "subdir2_file1_var2_renamed",
      "subdir2_file2_var1_renamed",
      "subdir2_file2_var2",
      "subdir1_file1_var1",
      "subdir1_file1_var2",
      "subdir1_file2_var1",
    ],
    "types": Array [
      "MyType1",
      "MyType2",
    ],
  },
  "/src/subdir1/file1.js": Object {
    "named": Array [
      "subdir1_file1_var1",
      "subdir1_file1_var2",
    ],
    "reexported": Array [
      "subdir1_file1_var1",
      "subdir1_file1_var2",
    ],
  },
  "/src/subdir1/file2.jsx": Object {
    "named": Array [
      "subdir1_file2_var1",
    ],
    "reexported": Array [
      "subdir1_file2_var1",
    ],
  },
  "/src/subdir1/fileWithNoNamedExports.js": Object {
    "default": "fileWithNoNamedExports",
  },
  "/src/subdir2/file1.js": Object {
    "reexported": Array [
      "preexisting_reexport_1",
      "preexisting_reexport_2",
      "subdir2_file1_var1",
      "subdir2_file1_var2",
    ],
  },
  "/src/subdir2/file2.jsx": Object {
    "reexported": Array [
      "subdir2_file2_var1",
      "subdir2_file2_var2",
    ],
  },
}
`;
